Fixing spacing in CSS

--- a/livefyre-comments/settings-template.css
+++ b/livefyre-comments/settings-template.css
@@ -3,14 +3,15 @@
 }
 
 .fyre-settings .fyre-container{
-	width:100%;
+	*width: 800px;
+	max-width: 800px;
 	height: auto;
-	display:block;
-	border-radius:7px;
+	display: block;
+	border-radius: 7px;
 	background: #fff;
 	border: 1px solid #999;
 	box-shadow: 0px 1px 1px rgba(0,0,0,0.2);
-	margin-bottom:16px;
+	margin-bottom: 16px;
 }
 
 .fyre-settings .fyre-container-list{
@@ -140,7 +141,7 @@
 	-webkit-box-sizing: border-box;
 	display:inline-block;
 	float:left;
-	margin:0px 4px 0px 0px;
+	margin:0px 6px 0px 0px;
 	text-align: center;
 }
 .fyre-settings .fyre-status.slate{
@@ -224,10 +225,11 @@
 	
 }
 .fyre-settings .fyre-title{
-	display:block;
+	display: block;
 	font: bold 14px/16px "Helvetica Neue";
 	color: #444;
 	text-shadow: 0px 1px rgba(255,255,255,0.75);
+	margin-bottom: 10px;
 	
 }
 .fyre-settings .fyre-subtext{
